--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "classnames": "^2.5.1",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
